nullaway_error_2B8924EB-684D-4F36-BD48-C858B54DBDDD.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-orm/src/main/java/org/springframework/orm/jpa/AbstractEntityManagerFactoryBean.java:430: error: [NullAway] dereferenced expression message is @Nullable
					if (!message.endsWith(causeString)) {
					            ^
    (see http://t.uber.com/nullaway )
